German language added, sample corrected.

--- a/samples/xmas.html
+++ b/samples/xmas.html
@@ -5,22 +5,22 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 -->
 <html>
 <head>
-	<title>Xmas plugin &mdash; CKEditor Sample</title>
+	<title>Greetings Card Plugin &mdash; CKEditor Sample</title>
 	<meta charset="utf-8">
 	<script src="../../../ckeditor.js"></script>
 	<link href="../../../samples/sample.css" rel="stylesheet">
-	<meta name="ckeditor-sample-name" content="Xmas plugin">
+	<meta name="ckeditor-sample-name" content="Greetings Card Plugin">
 	<meta name="ckeditor-sample-group" content="Plugins">
-	<meta name="ckeditor-sample-description" content="Show wishes card when user press button.">
+	<meta name="ckeditor-sample-description" content="Show greetings card when the user presses the toolbar button.">
 </head>
 <body>
 	<h1 class="samples">
-		<a href="index.html">CKEditor Samples</a> &raquo; Xmas plugin
+		<a href="index.html">CKEditor Samples</a> &raquo; Greetings Card Plugin
 	</h1>
 	<form action="sample_posteddata.php" method="post">
 		<div class="description">
 			<p>
-				Insert the following JavaScript call to your code:
+				To add the Greetings Card plugin, insert the following JavaScript call into your code:
 			</p>
 <pre class="samples">
 CKEDITOR.replace( '<em>textarea_id</em>', {
@@ -33,7 +33,7 @@ CKEDITOR.replace( '<em>textarea_id</em>', {
 		</textarea>
 		<div class="description">
 			<p>
-				Use configuration to create you own card:
+				Use the following configuration options to create you own card:
 			</p>
 <pre class="samples">
 CKEDITOR.replace( '<em>textarea_id</em>', {
