Typo in the sample.

--- a/samples/xmas.html
+++ b/samples/xmas.html
@@ -33,7 +33,7 @@ CKEDITOR.replace( '<em>textarea_id</em>', {
 		</textarea>
 		<div class="description">
 			<p>
-				Use the following configuration options to create you own card:
+				Use the following configuration options to create your own card:
 			</p>
 <pre class="samples">
 CKEDITOR.replace( '<em>textarea_id</em>', {
